# pandoc_writing_tools

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  REUSE.toml  latexmkrc  pyproject.toml
.github/workflows/: pr-ci.yml
agent/tasks/: github-pr-ci-option-2.execplan.md  per-document-bib-deps.execplan.md  per-document-image-deps.execplan.md
docker/: Dockerfile  entrypoint.sh
examples/feature-demo/: Makefile  build_with_docker.sh
examples/feature-demo/src/: feature-demo.bib  feature-demo.md
scripts/python/: generate_bib_deps.py  generate_image_deps.py  render_email.py  update_regression_goldens.py  upload_to_confluence.py
scripts/python/regression/: __init__.py  build_outputs.py  normalize_outputs.py
scripts/python/tests/: test_bib_dependencies.py  test_confluence_writer.py  test_image_dependencies.py  test_regression_outputs.py  test_upload_to_confluence.py
scripts/python/tests/fixtures/regression/feature-demo/: feature-demo.docx.txt  feature-demo.eml.txt  feature-demo.html.txt  feature-demo.native.txt  feature-demo.pdf.txt  feature-demo.pptx.txt  feature-demo.tex.txt  feature-demo.xhtml.txt  manifest.txt
theme/: add_feedback_buttons.lua  confluence.lua  fignos.lua  index.lua  markup_todo.lua  toc.lua
theme/html/: add_edit_to_headers.lua  clickable_headers.lua  default.css  markup_issue.lua  pandoc_template.html
theme/tex/: pandoc_template.tex  text_size.lua
